add-modules for project's required mods